<resources>
    <string name="app_name">Coffee Order</string>
    <string name="logo_discription">Логотип кафе</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="hint_name">Введите ваше имя</string>
    <string name="hint_password">Введите ваш пароль</string>
    <string name="btn_create_order">СОЗДАТЬ ЗАКАЗ</string>
    <string name="warning_toast">Все поля должны быть заполнены</string>
    <string name="makeOrder">Привет %s! Что будете заказывать?</string>
    <string name="coffee">Кофе</string>
    <string name="tea">Чай</string>
    <string name="additions">Что добавить в ваш заказ %s?</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лимон</string>
    <string name="chooseDrink">Выберите вид напитка</string>
    <string name="btn_send_order">Кнопка отправить заказ</string>
    <string name="order">Имя: %s\nПароль: %s\nНапиток: $s\nВид напитка %s\n</string>
    <string name="need_additions">\"Необходимые добавки: \"</string>

    <string-array name="options_of_coffee">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </string-array>

    <string-array name="options_of_tea">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Красный</item>
    </string-array>
</resources>